--- a/demo-consumer/src/main/resources/application.yaml
+++ b/demo-consumer/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
+server:
+  port: 8081
+config:
+  service:
+    employee:
+      base-url: http://localhost:8080
+
 springdoc:
   api-docs:
     path: /actuator/api-docs
